# min-max-greedy-matching

./: CMakeLists.txt  classic.h  generators.hpp  helpers.hpp  main.cpp  parallel.bat  paths.hpp  print.hpp  propositions.hpp
